finished sign in, sign up, create restaurant and create item

--- a/app/assets/stylesheets/pages/_password.scss
+++ b/app/assets/stylesheets/pages/_password.scss
@@ -1,47 +1,53 @@
-
-
-
-.main-container {
-  border-radius: 5px;
+.container-main-div {
   background-color: white;
-  border: 1px solid white;
-  width: 600px;
-  height: 500px;
-  margin-top: 100px;
-  margin-bottom: auto;
-  margin-left: auto;
-  margin-right: auto;
+  width: 60vw;
+  height: 100vh;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.container {
-  display: block;
-  flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
+.img1 {
+  margin: 30px 200px;
 }
 
+.container-div {
+  width: 500px;
+  height: 600px;
 
-h1 {
-  margin-top: 20px;
-  color: #00B24F;
-  text-align: center;
-}
-
-.form-actions {
-  text-align: center;
-  margin-top: 10px;
-
-  :hover {
-    color:#00B24F
+  .text {
+    font-size: 40px;
+    color: #00b24f;
+    text-align: center;
   }
 }
 
+.form-inputs3 {
+  width: 300px;
+  margin: auto;
 
+  input {
+    margin: auto;
+    border-radius: 30px;
+    text-align: center;
+  }
+}
 
-.link {
-  margin-top: 20px;
+.form-actions3 {
+  margin-top: 10px;
   text-align: center;
+  margin-bottom: 10px;
+  border-radius: 1px solid #00b24f ;
+  color:#00b24f
+}
+
+.link1 {
+  text-align: center;
+  a {
+    text-decoration: none;
+  }
   :hover {
-    color:#00B24F
+    color: #00b24f;
   }
 }
