--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,30 +1,34 @@
-<div class="main-container">
+<body id="login-page">
+  <div class="container-main-div">
 
-  <div class='container'>
-    <%= link_to root_path, class: "navbar-signup text-center" do %>
-      <%= image_tag "https://images.gmanews.tv/webpics/2019/06/Grab_Food_2019_06_20_01_45_58.jpg", width: 100 %>
-    <% end %>
-    <h1>Forgot your password?</h1>
+    <div class="container-div">
+
+      <div class="img1">
+        <%= link_to root_path, class: "navbar-brand" do %>
+          <%= image_tag "https://images.gmanews.tv/webpics/2019/06/Grab_Food_2019_06_20_01_45_58.jpg", width: 100 %>
+        <% end %>
+      </div>
+
+      <p class="text">Forgot your password?</p>
+      <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= f.error_notification %>
+
+      <div class="form-inputs3">
+        <%= f.input :email,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "email" } %>
+      </div>
+
+      <div class="form-actions3">
+        <%= f.button :submit, "Send me reset password instructions" %>
+      </div>
+      <% end %>
+
+      <div class="link1">
+        <%= render "devise/shared/links" %>
+      </div>
+    </div>
 
   </div>
-
-  <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-    <%= f.error_notification %>
-
-    <div class="form-inputs mt-10">
-      <%= f.input :email,
-                  required: true,
-                  autofocus: true,
-                  input_html: { autocomplete: "email" } %>
-    </div>
-
-    <div class="form-actions">
-      <%= f.button :submit, "Send me reset password instructions" %>
-
-    </div>
-
-    <% end %>
-    <div class="link"><%= render "devise/shared/links" %></div>
-
-
-</div>
+</body>
