--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,11 @@
   </head>
 
   <body>
-  <%= button_to "Log Out", destroy_user_session_path, method: :delete  %>
 
+    <% if user_signed_in? %>
+      <%= render "shared/navbar" %>
+    <% end %>
 
-    <%= render "shared/navbar" %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
