--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,64 +1,63 @@
 
-
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bootstrap 5 Search Example</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
   </head>
 
-
-  <div class="location-container">
-    <div class="location-greeting">
-      <p>Good Evening</p>
-    </div>
-    <div class="location-description">
-      <p>Let's explore good food around you</p>
-    </div>
-    <%# <div class="search-bar">
-      <input type="text" class="location-bar" placeholder="Search location">
-      <button type="button" class="btn btn-success">Success</button>
-    </div> %>
-    <%# <div class="search-bar">
-      <input type="text" class="search-dish" placeholder="search for dish or a restaurant">
-      <button type="button" class="btn btn-success">Search</button>
-    </div> %>
-
-<%# <div class="d-flex align-items-center p10">
-  <form class="d-flex">
-    <input class="form-control me-1" type="search" placeholder="search for dish or a restaurant" aria-label="Search">
-    <button class="btn btn-primary" type="submit">Search</button>
-  </form>
-</div> %>
-
-<%= form_with url: root_path, method: :get, class: "d-flex search-bar" do %>
-  <%= text_field_tag :query,
-    params[:query],
-    class: "form-control",
-    placeholder: "Find Your Favourite Restaurant, Cuisine and Dish"
-  %>
-  <%= submit_tag "Search", class: "btn btn-success search-button" %>
-  <% end %>
-<br>
-
- <div class="cards2">
-
-    <h1><%#Available Restaurants in <%= @user.address %></h1>
-  <div class="flex-wrap all-restaurant d-flex gap-2 justify-content-center front-body">
-      <% @restaurants.each do |restaurant|%>
-      <div class="border p-3 border-success" >
-        <div><%= image_tag "fish.jpg" %></div>
-        <p><%= link_to restaurant.name, restaurant_path(restaurant) %></p>
-        <p><%= restaurant.category %></p>
-        <p><%= restaurant.location %></p>
-        <p><%= restaurant.opening_hour %></p>
-        <p><%= restaurant.closing_hour %></p>
+  <body>
+    <%= render "shared/navbar" %>
+    <div class="location-container">
+      <div class="location-greeting">
+        <p>Good Evening</p>
       </div>
+      <div class="location-description">
+        <p>Let's explore good food around you</p>
+      </div>
+      <%# <div class="search-bar">
+        <input type="text" class="location-bar" placeholder="Search location">
+        <button type="button" class="btn btn-success">Success</button>
+      </div> %>
+      <%# <div class="search-bar">
+        <input type="text" class="search-dish" placeholder="search for dish or a restaurant">
+        <button type="button" class="btn btn-success">Search</button>
+      </div> %>
+
+  <%# <div class="d-flex align-items-center p10">
+    <form class="d-flex">
+      <input class="form-control me-1" type="search" placeholder="search for dish or a restaurant" aria-label="Search">
+      <button class="btn btn-primary" type="submit">Search</button>
+    </form>
+  </div> %>
+
+    <%= form_with url: root_path, method: :get, class: "d-flex search-bar" do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control",
+        placeholder: "Find Your Favourite Restaurant, Cuisine and Dish"
+      %>
+      <%= submit_tag "Search", class: "btn btn-success search-button" %>
       <% end %>
+    <br>
+
+  <div class="cards2">
+
+      <h1><%#Available Restaurants in <%= @user.address %></h1>
+    <div class="flex-wrap all-restaurant d-flex gap-2 justify-content-center front-body">
+        <% @restaurants.each do |restaurant|%>
+        <div class="border p-3 border-success" >
+          <div><%= image_tag "fish.jpg" %></div>
+          <p><%= link_to restaurant.name, restaurant_path(restaurant) %></p>
+          <p><%= restaurant.category %></p>
+          <p><%= restaurant.location %></p>
+          <p><%= restaurant.opening_hour %></p>
+          <p><%= restaurant.closing_hour %></p>
+        </div>
+        <% end %>
+    </div>
   </div>
- </div>
+  </body>
