--- a/app/assets/stylesheets/components/_location.scss
+++ b/app/assets/stylesheets/components/_location.scss
@@ -19,6 +19,30 @@
 //   padding: 6px 48px;
 // }
 
+// --------Below is banner code---
+.banner {
+  background-size: cover;
+  background-position: center;
+  padding: 300px 0;
+  padding-left: 20px;
+}
+.banner p {
+  margin: 0;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.banner p {
+  font-size: 20px;
+  color: white;
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+// -------banner code until here----
+
 .search-bar {
   width: 50%;
 }
