edit the item layout

--- a/app/assets/stylesheets/components/_location.scss
+++ b/app/assets/stylesheets/components/_location.scss
@@ -93,3 +93,11 @@ h1 {
   font-size: 40px !important;
   text-align: center;
 }
+
+.row {
+  padding-top: 10px;
+}
+
+.border_items {
+  padding-top: 10px;
+}
