--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,8 +34,8 @@
 
 <div class="row">
   <% @restaurants.each do |restaurant|%>
-    <div class="col-sm-3 d-flex" >
-      <div class="card border p-3 border-success">
+    <div class="col-sm-2 d-flex" >
+      <div class="card border p-3 border-success border_items">
         <div class="card-img-top"><%= image_tag "fish.jpg" %></div>
         <div class="card-body d-flex flex-column">
           <div class="card-title"><h4><%= link_to restaurant.name, restaurant_path(restaurant) %></h4></div>
