edited user show page

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,7 +2,7 @@
 <div class = background style="background-color: #02B04E;">
   <div class = "container">
     <div class = "top-section">
-      <%= image_tag "grabfood_image.png" %>
+      <%= image_tag "snatch_food_white.png" %>
       <br>
       <br>
       <div class = "last_step_checkout">
