--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,9 +34,9 @@
 
 <div class="row">
   <% @restaurants.each do |restaurant|%>
-    <div class="col-sm-2 d-flex" >
+    <div class="col-lg-2 d-flex" >
       <div class="card border p-3 border-success border_items">
-        <div class="card-img-top"><%= image_tag "fish.jpg" %></div>
+        <div class="card-img-top"><%= image_tag "burger_queen_250" %></div>
         <div class="card-body d-flex flex-column">
           <div class="card-title"><h4><%= link_to restaurant.name, restaurant_path(restaurant) %></h4></div>
           <div class="card-subtitle mb-auto text-muted"><p><%= restaurant.category %></p></div>
