--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
     <%= render "shared/navbar" %>
     <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <p class="alert p-0 mt-0"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
