--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,3 +48,14 @@
     </div>
   <% end %>
 </div>
+
+<div class="footer">
+  <div class="footer-links">
+    <a href="https://food.grab.com/sg/en/"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/GrabFoodSG"><i class="fab fa-facebook"></i></a>
+    <a href="https://food.grab.com/sg/en/"><i class="fab fa-twitter"></i></a>
+  </div>
+  <div class="footer-copyright">
+    Made with <i class="fas fa-heart"></i> from Snatch Food Team
+  </div>
+</div>
