--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,8 +39,8 @@
         <div class="card-img-top"><%= image_tag "burger_queen_250" %></div>
         <div class="card-body d-flex flex-column">
           <div class="card-title"><h4><%= link_to restaurant.name, restaurant_path(restaurant) %></h4></div>
-          <div class="card-subtitle mb-auto text-muted"><p><%= restaurant.category %></p></div>
-          <div class="card-text mb-auto"><p><%= restaurant.location %></p></div>
+          <div class="card-subtitle mb-auto text-muted"><p>Cuisine: <%= restaurant.category %></p></div>
+          <div class="card-text mb-auto"><p>Location: <%= restaurant.location %></p></div>
           <div class="card-text mb-auto"><p>Opening Hour: <%= restaurant.opening_hour %></p></div>
           <div class="card-text mb-auto"><p>Closing Hour: <%= restaurant.closing_hour %></p></div>
         </div>
