--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,23 @@
-<div class="container my-0">
-  <div class="text-center">
-    <h2>Welcome to GrabFood</h2>
-    <h3>Sign up here </h3>
-  </div>
+<body id="signup-page">
+  <div class="main-container-signup my-0">
+    <div class="second-container-signup">
 
-  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= f.error_notification %>
-    <div class="form-inputs">
-      <%= f.input :is_seller, label: 'Are you a business owner?' %>
+      <div class="img-signup">
+        <%= link_to root_path, class: "navbar-brand" do %>
+          <%= image_tag "snatch_food", width: 120 %>
+        <% end %>
+      </div>
+
+      <div class="text-center">
+        <h2 class="text-signup">Welcome to GrabFood</h2>
+        <h3 class="text-signup">Sign up here </h3>
+      </div>
+
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
+
+      <div class="form-inputs-signup">
+        <%= f.input :is_seller, label: 'Are you a business owner?' %>
         <%= f.input :name %>
         <%= f.input :address %>
         <%= f.input :email,
@@ -22,15 +32,19 @@
         <%= f.input :password_confirmation,
                     required: true,
                     input_html: { autocomplete: "new-password" } %>
-    </div>
-    <div class="form-actions2">
-      <%= f.button :submit, "Sign up", class: 'signup' %>
-    </div>
-    <div class="link">
-      <%= link_to "Already have an account? Log in", new_user_session_path %>
-    </div>
-  <% end %>
-</div>
+      </div>
 
+      <div class="form-actions-signup">
+        <%= f.button :submit, "Sign up", class: 'signup-button' %>
+      </div>
+      <% end %>
+
+      <div class="link-signup">
+        <%= link_to "Already have an account? Log in", new_user_session_path %>
+      </div>
+
+    </div>
+  </div>
+</body>
 
 <%# <%= render "devise/shared/links" %>
