--- a/app/assets/stylesheets/pages/_password.scss
+++ b/app/assets/stylesheets/pages/_password.scss
@@ -1,41 +1,61 @@
-.main-container {
-  border-radius: 5px;
+body#pass-page {
+  background-color: #00b24f;
+}
+
+.main-container-password {
   background-color: white;
-  border: 1px solid white;
-  width: 600px;
-  height: 500px;
-  margin-top: 100px;
-  margin-bottom: auto;
-  margin-left: auto;
-  margin-right: auto;
+  width: 60vw;
+  height: 100vh;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.container {
-  display: block;
-  flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
-}
+.second-container-password {
+  width: 500px;
+  margin: 0 auto;
 
-h1 {
-  margin-top: 20px;
-  color: #00b24f;
-  text-align: center;
-}
-
-.form-actions {
-  text-align: center;
-  margin-top: 10px;
-
-  :hover {
+  h1 {
     color: #00b24f;
+  }
+
+  .img-password {
+    margin: 0 auto;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+}
+
+.form-inputs-password {
+  width: 300px;
+  margin: 0 auto;
+
+  input {
+    border-radius: 20px;
   }
 }
 
-.link {
-  margin-top: 20px;
+.form-actions-password {
+  margin: 0 auto;
   text-align: center;
+
   :hover {
+    color:#00b24f
+  }
+}
+
+.link-password {
+  text-align: center;
+
+  a {
+    text-decoration: none;
+  }
+
+  a:hover {
     color: #00b24f;
   }
 }
