--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
 
 
-  <% unless current_page?(new_user_session_path) || current_page?(new_user_registration_path)  %>
+  <% unless current_page?(new_user_session_path) || current_page?(new_user_registration_path) || current_page?(new_user_password_path) %>
     <%= render "shared/navbar" %>
   <% end %>
 
