--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,7 +1,8 @@
 <div class="dashboard">
   <div class="restaurant-header">
-    <h1><strong>Create your Restaurant Profile</strong></h1>
+    <h1><strong>Create your own Restaurant Profile</strong></h1>
     <p><em>We are as excited as you</em></p>
+    <%= link_to "Back to Homepage", root_path %>
   </div>
 </div>
 
