--- a/app/assets/stylesheets/components/_user_show.scss
+++ b/app/assets/stylesheets/components/_user_show.scss
@@ -3,12 +3,11 @@
   background-position: center;
   padding: 200px 0;
   padding-left: 20px;
-
 }
 #user_show_font {
   margin: 0;
   color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
   font-size: 40px;
   font-weight: bold;
 }
