--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -2,6 +2,7 @@
   <div class="restaurant-header">
     <h1><strong>Let's Create Your Menu</strong></h1>
     <p><em>Fixing your customer's hunger</em></p>
+    <%= link_to "Food Dashboard", restaurant_path(@restaurant) %> | <%= link_to "Back to Homepage", root_path %>
   </div>
 </div>
 
