--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-  <%= button_to "Log Out", destroy_user_session_path, method: :delete %>
+  <%# <%= button_to "Log Out", destroy_user_session_path, method: :delete %>
   <%# <%= Julien, rmb to remove the log out button %>
 
     <%= render "shared/navbar" %>
