--- a/app/views/restaurants/show_seller.html.erb
+++ b/app/views/restaurants/show_seller.html.erb
@@ -1,9 +1,9 @@
 <div class="container-seller">
-  <div class="dashboard">
+  <div class="dashboard" style="background-image: url(https://www.pptgrounds.com/wp-content/uploads/2019/04/Health-foods-ppt-backgrounds.jpg);">
     <div class="restaurant-header">
       <h1><strong><%= @restaurant.name %></strong></h1>
-      <h5>Your Food Dashboard</h5>
-      <%= link_to "Create New Item", new_restaurant_item_path(@restaurant, @item) %> | <%= link_to "Back to Homepage", root_path %>
+      <h5>Food Dashboard</h5>
+      <p class="link-header"><%= link_to "Create New Item", new_restaurant_item_path(@restaurant, @item) %> | <%= link_to "Back to Homepage", root_path %></p>
     </div>
   </div>
 
@@ -13,10 +13,10 @@
     <div class="target-items row gap-3 pt-3 justify-content-center text-center">
       <% @restaurant.items.each do |item| %>
           <%# <% restaurant.items.each do |item| %>
-            <div class="card boader p-3 border-success col-6 col-md-4 col-lg-3">
+            <div class="card-restaurant boader p-3 border-success col-6 col-md-4 col-lg-3">
               <div class="card-img"><%= image_tag "fish.jpg" %></div>
-              <h4 class="name"><%= item.name %></h4>
-              <p class="description"><%= item.description %></p>
+              <h4 class="name mt-4"><%= item.name %></h4>
+              <p class="item-name"><%= item.description %></p>
               <p class="price">$<%= item.price %></p>
               <div>
                 <%= link_to "Edit", edit_restaurant_item_path(@restaurant, item) %> | <%= link_to "Delete", restaurant_item_path(@restaurant, item), data: {turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
