--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,9 +32,9 @@
   <br>
 </div>
 
-<div class="row">
+<div class="d-flex flex-wrap justify-content-center gap-4 px-1 mt-4">
   <% @restaurants.each do |restaurant|%>
-    <div class="col-lg-2 d-flex" >
+    <div class=" d-flex" >
       <div class="card border p-3 border-success border_items">
         <div class="card-img-top"><%= image_tag "burger_queen_250" %></div>
         <div class="card-body d-flex flex-column">
