--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -11,7 +11,7 @@
     </div>
 
     <% if user_signed_in? %>
-      <%= link_to "View Confirmation", order_path(@order), class: "btn btn-success"%>
+      <%= link_to "View Your Order", order_path(@order), class: "btn btn-success"%>
     <% end %>
   </div>
 </div>
@@ -29,7 +29,7 @@
               <% if user_signed_in? %>
                 <div class="mt-auto">
                   <%= simple_form_for [@order, @order_item] do |f| %>
-                    <div class="field"><%= f.input :quantity, input_html: { min: 0 } %></div>
+                    <div class="field"><%= f.input :quantity, input_html: { min: 0, value: f.object.quantity || '0' } %></div>
                     <%= f.input :restaurant_id, :as => :hidden, :input_html => { :value => @restaurant.id } %>
                     <%= f.input :item_id, :as => :hidden, :input_html => { :value => item.id } %>
                     <a><%= f.submit "Add item", class: "btn btn-primary align-items-center" %></a>
