edit the class name

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,7 +1,7 @@
 <%# <h1>BUYER SHOW PAGE </h1> %>
 <%# restaurant banner details %>
 <div class="banner_buyer_show" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/1651166/pexels-photo-1651166.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);">
-  <div class="header">
+  <div class="header_user_show">
     <p id= "user_show_font"><%= link_to 'Home', root_path, class: "text-decoration-none btn btn-outline-light"  %> </p>
     <p id= "user_show_font">Restaurant Name: <%= @restaurant.name %></p>
     <div class="restaurant-details">
