--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,3 @@
-
-
-  <!DOCTYPE html>
-<html lang="en">
-
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap 5 Search Example</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  </head>
-
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/3298057/pexels-photo-3298057.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);">
     <div class="location-greeting">
       <p>Good Evening</p>
@@ -34,18 +20,7 @@
 
 <div class="d-flex flex-wrap justify-content-center gap-4 px-1 mt-4">
   <% @restaurants.each do |restaurant|%>
-    <div class=" d-flex" >
-      <div class="card border p-3 border-success border_items">
-        <div class="card-img-top"><%= image_tag "burger_queen_250" %></div>
-        <div class="card-body d-flex flex-column">
-          <div class="card-title"><h4><%= link_to restaurant.name, restaurant_path(restaurant) %></h4></div>
-          <div class="card-subtitle mb-auto text-muted"><p>Cuisine: <%= restaurant.category %></p></div>
-          <div class="card-text mb-auto"><p>Location: <%= restaurant.location %></p></div>
-          <div class="card-text mb-auto"><p>Opening Hour: <%= restaurant.opening_hour %></p></div>
-          <div class="card-text mb-auto"><p>Closing Hour: <%= restaurant.closing_hour %></p></div>
-        </div>
-      </div>
-    </div>
+    <%= render restaurant %>
   <% end %>
 </div>
 
