remove the text  hyperlink color in the card

--- a/app/views/restaurants/_restaurant.html.erb
+++ b/app/views/restaurants/_restaurant.html.erb
@@ -1,4 +1,4 @@
-<%= link_to restaurant_path(restaurant) do %>
+<%= link_to restaurant_path(restaurant), class: "text-decoration-none text_color" do %>
   <div class="card border p-3 border-success border_items">
     <div class="card-img-top"><%= image_tag "burger_queen_250" %></div>
 
