all seller pages

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,18 +22,30 @@
   color: black;
 }
 
+.details {
+  width: 100%;
+}
+
+.target-items {
+  width: 100%;
+}
+
 .detail {
   width: 320px;
   height: 360px;
   background-color: white;
   border: 1px solid rgb(116, 255, 116);
   border-radius: 4px;
+  box-shadow: 0 0 4px 0 #9b9b9b;
 }
 
 .links {
   color: green;
 }
 
+.content {
+  background-color: #02b04e;
+}
 
 .card-restaurant {
   width: 320px;
@@ -50,13 +62,13 @@
 }
 
 .footer {
-  background: #F4F4F4;
+  background: #f4f4f4;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: rgba(0, 0, 0, 0.3);
 }
 .footer-links {
   display: flex;
@@ -73,5 +85,5 @@
   opacity: 1;
 }
 .footer .fa-heart {
-  color: #D23333;
+  color: #d23333;
 }
