--- a/app/assets/stylesheets/pages/_create_restaurant.scss
+++ b/app/assets/stylesheets/pages/_create_restaurant.scss
@@ -1,28 +1,28 @@
-body#restaurant-create {
-  background-color: #00b24f;
-}
+// body#restaurant-create {
+//   background-color: #00b24f;
+// }
 
-.create-res-container {
-  margin: auto;
-  width: 400px;
-  background-color: white;
+// .create-res-container {
+//   margin: auto;
+//   width: 400px;
+//   background-color: white;
 
-  input {
-    border-radius: 30px;
-  }
-}
+//   input {
+//     border-radius: 30px;
+//   }
+// }
 
-.dashboard {
-  width: 700px;
-  height: 100px
+// .dashboard {
+//   width: 700px;
+//   height: 100px
 
-}
+// }
 
-.create-restaurant-header {
-  margin: 50px 0px;
-  p {
-    font-size: 30px;
-    text-align: center;
-    color: #00b24f;
-  }
-}
+// .create-restaurant-header {
+//   margin: 50px 0px;
+//   p {
+//     font-size: 30px;
+//     text-align: center;
+//     color: #00b24f;
+//   }
+// }
