--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,20 +1,23 @@
 <div class="body">
-  <div class="banner" style="background-image: url(https://i0.wp.com/diplomartbrussels.com/wp-content/uploads/2020/09/food-background-images-94-images-in-co-381169-png-images-pngio-food-background-png-1440_619.png?fit=1440%2C619&ssl=1);">
+  <div class="banner" style="background-image: url(https://images.pexels.com/photos/1640773/pexels-photo-1640773.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);">
     <div class="restaurant-header justify-content-center text-center">
-      <h1><strong>Welcome to your Restaurant Page</strong></h1>
-      <h2><%= link_to "Create a new restaurant", new_restaurant_path(@restaurant)%></h2>
+      <h1><strong>Welcome to my Restaurant Page</strong></h1>
+      <h2><%= link_to "Create a new restaurant", new_restaurant_path(@restaurant), class: "text-decoration-none text-black" %></h2>
     </div>
   </div>
 
   <div class="restaurant-container mt-4">
     <div class="details row gap-3 pt-3 justify-content-center text-center">
       <% @restaurants.each do |restaurant| %>
-        <div class="detail boader p-3 border-success col-6 col-md-4 col-lg-3">
-          <div class="detail-img text-center pb-3"><%= image_tag "fish.jpg" %></div>
-            <p>Name: <%= link_to restaurant.name, restaurant_path(restaurant) %></p>
-            <p>Location: <%= restaurant.location %></p>
-            <p>Category: <%= restaurant.category %></p>
+        <div class="detail p-3 border-success col-6 col-md-4 col-lg-3">
+          <%= link_to restaurant_path(restaurant), class: "text-decoration-none text-black " do %>
+            <div class="detail-img text-center pb-3"><%= image_tag "fish.jpg" %></div>
+              <p>Name: <%= restaurant.name %></p>
+              <p>Location: <%= restaurant.location %></p>
+              <p>Category: <%= restaurant.category %></p>
+          <% end %>
         </div>
       <% end %>
     </div>
   </div>
+</div>
