beautify the checkout page

--- a/app/assets/stylesheets/components/_user_show.scss
+++ b/app/assets/stylesheets/components/_user_show.scss
@@ -19,3 +19,11 @@
 .text_color {
   color : black;
 }
+
+.last_step_checkout {
+  border-style: dashed solid;
+}
+
+.delivery_status {
+  align-self: center;
+}
