--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
   <br>
 </div>
 
-<div class="d-flex flex-wrap justify-content-center gap-4 px-1 mt-4">
+<div class="d-flex flex-wrap justify-content-center gap-4 px-1 mt-4 item_card">
   <% @restaurants.each do |restaurant|%>
     <%= render restaurant %>
   <% end %>
@@ -26,9 +26,9 @@
 
 <div class="footer">
   <div class="footer-links">
-    <a href="https://food.grab.com/sg/en/"><i class="fab fa-instagram"></i></a>
+    <%# <a href="https://food.grab.com/sg/en/"><i class="fab fa-instagram"></i></a>
     <a href="https://www.facebook.com/GrabFoodSG"><i class="fab fa-facebook"></i></a>
-    <a href="https://food.grab.com/sg/en/"><i class="fab fa-twitter"></i></a>
+    <a href="https://food.grab.com/sg/en/"><i class="fab fa-twitter"></i></a> %>
   </div>
   <div class="footer-copyright">
     Made with <i class="fas fa-heart"></i> from Snatch Food Team
