--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -50,13 +50,14 @@
 }
 
 .footer {
-  background: #F4F4F4;
+  background: #09AA4C;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: rgb(255, 255, 255);
+  margin-top: 20px;
 }
 .footer-links {
   display: flex;
