center words in banner

--- a/app/assets/stylesheets/components/_user_show.scss
+++ b/app/assets/stylesheets/components/_user_show.scss
@@ -3,6 +3,7 @@
   background-position: center;
   padding: 200px 0;
   padding-left: 20px;
+  text-align: center;
 }
 #user_show_font {
   margin: 0;
