--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -7,7 +7,7 @@
     <div class="restaurant-details">
       <%# <h2 id= "user_show_font"><strong><%= @restaurant.name %></strong></h2>
       <p id= "user_show_font">Location: <%= @restaurant.location %></p>
-      <p id= "user_show_font">Category: <%= @restaurant.category %></p>
+      <p id= "user_show_font">Cuisine: <%= @restaurant.category %></p>
     </div>
 
     <%# <% if user_signed_in? %>
