--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
         <h3 class="text-signup">Sign up here </h3>
       </div>
 
-      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false})  do |f| %>
       <%= f.error_notification %>
 
       <div class="form-inputs-signup">
