--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -12,6 +12,7 @@
     <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :price %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit %>
   <% end %>
 </div>
