--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -10,13 +10,14 @@
     <div class="details row gap-3 pt-3 justify-content-center text-center">
       <% @restaurants.each do |restaurant| %>
         <div class="detail boader p-3 border-success col-6 col-md-4 col-lg-3">
-          <div class="detail-img text-center pb-3"><%= image_tag "fish.jpg" %></div>
-            <p>Name: <%= link_to restaurant.name, restaurant_path(restaurant) %></p>
-            <% if restaurant.photo.attached? %>
-              <%= cl_image_tag restaurant.photo.key, height: 300, width: 400, crop: :fill %>
-            <% end %>
-            <p>Location: <%= restaurant.location %></p>
-            <p>Category: <%= restaurant.category %></p>
+          <% if restaurant.photo.attached? %>
+            <div class="detail-img text-center pb-3"><%= cl_image_tag restaurant.photo.key, height: 200, width: 200, crop: :fill %></div>
+          <% end %>
+            <p class="index-text mb-0">Name: <%= link_to restaurant.name, restaurant_path(restaurant) %></p>
+            <p class="index-text mb-0">Location: <%= restaurant.location %></p>
+            <p class="index-text mb-0">Category: <%= restaurant.category %></p>
+            <%= link_to "Delete", restaurant_path(restaurant), data: {turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
+
         </div>
       <% end %>
     </div>
