bug fix snatch_food.png

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
 
       <div class="img-signup">
         <%= link_to root_path, class: "navbar-brand" do %>
-          <%= image_tag "snatch_food", width: 120 %>
+          <%= image_tag "snatch_food.png", width: 120 %>
         <% end %>
       </div>
 
